yml-config/api-ui.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-server
spec:
  selector:
    matchLabels:
      app: ui-server
  template:
    metadata:
      labels:
        app: ui-server
    spec:
      replicas: 1
      containers:
      - name: ui-server
        image: <Image>
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
