yml-config/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-server2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: http-server2
  template:
    metadata:
      labels:
        app: http-server2
    spec:
      containers:
      - name: http-server2
        image: avramstefan/ipw-flask-redis:1.1
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 5000
