yml-config/api-server.yml
apiVersion: v1
kind: Service
metadata:
  name: api-server
spec:
  selector:
    app: api-server
  ports:
  - port: 5000
    targetPort: 5000
