yml-config/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: http-server2
spec:
  type: NodePort
  selector:
    app: http-server2
  ports:
  #port nginx
  - port: 5000
    targetPort: 5000
    nodePort: 31000
