yml-config/database-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: redis-service
  ports:
  - port: 6379
    targetPort: 6379
