yml-config/flask-ingress-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-server
spec:
  type: ClusterIP
  selector:
    app: api-server
  ports:
  - port: 5000
    targetPort: 5000
