yml-config/api.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: entrypoint
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  labels:
    name: entrypoint
spec:
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: "/api(/|$)(.*)"
          backend:
            service:
              name: api-server
              port:
                number: 5000
        - pathType: Prefix
          path: "/ui(/|$)(.*)"
          backend:
            service:
              name: ui-server
              port:
                number: 5000
